# ivanovnikolayyy

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: python-ci.yaml
configs/: train_config.yaml  train_config_rf.yaml
dags/: docker.py  download_dag.py  predict_dag.py  train_dag.py
data/: targets.csv
images/airflow-download/: Dockerfile  download.py  fake.py
images/airflow-eda/: Dockerfile  eda.py
images/airflow-ml-base/: Dockerfile
images/airflow-predict/: Dockerfile  predict.py
images/airflow-split/: Dockerfile  split.py
images/airflow-train/: Dockerfile  train.py  train_config.yaml
images/airflow-validate/: Dockerfile  validate.py
kubernetes_manifests/: app.py  online-inference-deployment-blue-green.yaml  online-inference-deployment-rolling-update.yaml  online-inference-pod-probes.yaml  online-inference-pod-resources.yaml  online-inference-pod.yaml  online-inference-replicaset.yaml
ml_project/: __init__.py  app.py  make_request.py  run.py
ml_project/classifiers/: __init__.py  make_classifier.py
ml_project/data/: __init__.py  make_dataset.py
ml_project/features/: __init__.py  build_features.py  make_features.py
ml_project/models/: __init__.py  classifier.py
ml_project/params/: __init__.py  classifier_params.py  feature_params.py  pipeline_params.py  split_params.py
models/: metrics.json  model.pkl
predicts/: predicts.npy
tests/: conftest.py  data.csv  targets.csv  test_end2end_training.py  test_train_pipeline.py  train_data_sample.csv
tests/app/: test_app.py
tests/data/: test_dataset.py
(+2 files in other folders)
