[tool.poetry]
name = "ml_project"
version = "0.1.0"
description = "Homework for 'Machine Learning in Production' course"
authors = ["ivanovnikolayyy <kolyaslaplace@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^1.1.1"
marshmallow-dataclass = "^8.5.8"
mlflow = "^1.26.1"
typer = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
